Prevent metadata overflow when words are long and don't have natural break points

--- a/plugins/Marketplace/stylesheets/plugin-details.less
+++ b/plugins/Marketplace/stylesheets/plugin-details.less
@@ -61,6 +61,9 @@
         // -1px to force overlapping border overlapping with content
         margin-left: calc(~"0.75rem - 1px");
         border-left: 1px solid silver;
+
+        // prevent text overflow
+        word-break: break-word;
     }
 
     .variationPicker {
